--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "template-plugin",
-	"name": "Template Plugin",
+	"id": "auto-toc",
+	"name": "Auto Toc",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "Template for creating plugins for the Obsidian API.",
