--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "insta-toc",
 	"name": "Insta TOC",
-	"version": "1.0.0",
+	"version": "1.0.2",
 	"minAppVersion": "0.15.0",
-	"description": "Template for creating plugins for the Obsidian API.",
-	"author": "Obsidian",
+	"description": "Simultaneously generate, update, and maintain a table of contents for your notes.",
+	"author": "Nick C.",
 	"isDesktopOnly": false
 }
