--- a/package.json
+++ b/package.json
@@ -2,15 +2,27 @@
     "name": "insta-toc",
     "version": "1.0.2",
     "description": "Simultaneously generate, update, and maintain a table of contents for your notes.",
-    "main": "dist/dev/main.js",
+    "repository": {
+        "directory": ".",
+        "type": "git",
+        "url": "https://github.com/iLiftALot/insta-toc.git"
+    },
+    "homepage": "https://github.com/iLiftALot/insta-toc",
+    "main": "dist/build/main.js",
     "scripts": {
         "dev:log": "node esbuild.config.mjs logger && terser -o dist/dev/main.js dist/dev/main.js",
         "dev": "node esbuild.config.mjs && terser -o dist/dev/main.js dist/dev/main.js",
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && terser -o dist/build/main.js dist/build/main.js",
-        "version": "node version-bump.mjs && git add manifest.json versions.json"
+        "bump-version": "node version-bump.mjs"
     },
-    "keywords": [],
-    "author": "",
+    "keywords": [
+        "obsidian",
+        "obsidian plugin",
+        "obsidian-plugin",
+        "toc",
+        "table of contents"
+    ],
+    "author": "Nick C.",
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^16.11.6",
