--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,7 @@
         "node_modules/obsidian-typings/dist/implementations.d.ts",
         "node_modules/obsidian-typings/dist/implementations.cjs"
       ],
-      "Utility": [
-        "./typings/Utility"
-      ]
+      "Utility": ["./typings/Utility"]
     },
     "outDir": "./dist"
   },
