workflow changes & version-bump.mjs change change

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "dev:log": "node esbuild.config.mjs logger && terser -o dist/dev/main.js dist/dev/main.js",
         "dev": "node esbuild.config.mjs && terser -o dist/dev/main.js dist/dev/main.js",
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && terser -o dist/build/main.js dist/build/main.js",
-        "bump-version": "node version-bump.mjs"
+        "bump-version": "node version-bump.mjs",
+        "upload": "npm version patch -m \"Automated bump to %s\" && npm run bump-version && npm run build && git add . && git push origin development --follow-tags"
     },
     "keywords": [
         "obsidian",
