--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -53,7 +53,9 @@ jobs:
 
       - name: Get Version
         id: get_version
-        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       #- name: Update Version
       #  id: update_version
