--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -13,7 +13,7 @@ on:
     inputs:
       version_type:
         description: 'Specify version bump type'
-        required: true
+        required: false
         default: 'patch'
         type: choice
         options:
