--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -5,10 +5,7 @@ on:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
     branches:
-      - 'development'
-  pull_request:
-    branches:
-      - development
+      - 'master'
   workflow_dispatch:
     inputs:
       version_type:
@@ -57,21 +54,6 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      #- name: Update Version
-      #  id: update_version
-      #  run: |
-      #    npm version {{ github.event.inputs.version_type || 'patch' }} -m "Automated bump to %s"
-      #    new_version=$(node -p "require('./package.json').version")
-      #    echo "new_version=$new_version" >> $GITHUB_OUTPUT
-
-      #- name: Run Version Bump Script
-      #  run: npm run bump-version
-
-      #- name: Commit Version Bump Changes
-      #  run: |
-      #    git add .
-      #    git commit -m "Update manifest and versions to s{{ steps.update_version.outputs.new_version }}"
-
       - name: Build Project
         run: npm run build
 
@@ -86,7 +68,7 @@ jobs:
 
       - name: Push Changes
         run: |
-          git push origin development --follow-tags
+          git push origin master --follow-tags
 
       #- name: Publish to npm
       #  env:
@@ -106,6 +88,6 @@ jobs:
         with:
           name: insta-toc-${{ env.VERSION }}
           path: |
-            manifest.json
-            main.js
-            styles.css
+            ../../manifest.json
+            ../../main.js
+            ../../styles.css
