--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -70,10 +70,10 @@ jobs:
         run: |
           git push origin --follow-tags
 
-      #- name: Publish to npm
-      #  env:
-      #    NODE_AUTH_TOKEN: {{ secrets.NPM_TOKEN }}
-      #  run: npm publish
+      - name: Publish to npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2.1.0
