--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -59,7 +59,7 @@ jobs:
 
       #- name: Publish to npm
       #  env:
-      #    NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #    NODE_AUTH_TOKEN: {{ secrets.NPM_TOKEN }}
       #  run: npm publish
 
       - name: Create GitHub Release
