--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "insta-toc",
     "version": "3.2.6",
-    "description": "Simultaneously generate, update, and maintain a table of contents for your notes.",
+    "description": "Simultaneously generate, update, and maintain a table of contents for your notes in real time.",
     "repository": {
         "directory": ".",
         "type": "git",
@@ -15,8 +15,8 @@
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && terser -o dist/build/main.js dist/build/main.js",
         "bump-version": "node version-bump.mjs",
         "upload:patch": "npm version patch --no-git-tag-version && npm run bump-version && npm run build && git add . && VERSION=$(node -p \"require('./package.json').version\") && git commit -m \"Automated update for version $VERSION\" && git tag -a $VERSION -m \"Version $VERSION\" && git push origin --follow-tags",
-        "upload:minor": "npm version minor -m \"Automated bump to %s\" && npm run bump-version && npm run build && git add . && VERSION=$(node -p \"require('./package.json').version\") && git commit -m \"Update for version $VERSION\" && git push origin --follow-tags",
-        "upload:major": "npm version major -m \"Automated bump to %s\" && npm run bump-version && npm run build && git add . && VERSION=$(node -p \"require('./package.json').version\") && git commit -m \"Update for version $VERSION\" && git push origin --follow-tags"
+        "upload:minor": "npm version minor --no-git-tag-version && npm run bump-version && npm run build && git add . && VERSION=$(node -p \"require('./package.json').version\") && git commit -m \"Automated update for version $VERSION\" && git tag -a $VERSION -m \"Version $VERSION\" && git push origin --follow-tags",
+        "upload:major": "npm version major --no-git-tag-version && npm run bump-version && npm run build && git add . && VERSION=$(node -p \"require('./package.json').version\") && git commit -m \"Automated update for version $VERSION\" && git tag -a $VERSION -m \"Version $VERSION\" && git push origin --follow-tags"
     },
     "keywords": [
         "obsidian",
