--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "target": "ES6",
     "allowJs": true,
     "checkJs": true,
@@ -16,8 +16,9 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "lib": ["DOM", "ES5", "ES6", "ES7", "ES2021"],
-    "types": ["node", "obsidian-typings"],
+    "types": ["node", "obsidian-typings", "jest"],
     "paths": {
       "obsidian-typings/implementations": [
         "node_modules/obsidian-typings/dist/implementations.d.ts",
@@ -31,7 +32,8 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "typings/**/*.js",
-    "typings/**/*.d.ts"
+    "typings/**/*.d.ts",
+    "test/**/*.ts"
   ],
   "exclude": ["node_modules", "main.js", "dist"]
 }
