Improved testing logic via jest, vitest, and VS Code tasks. More to do here soon to account for newest validator.ts logic etc.

--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,8 @@ dist
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
-.vscode
+.vscode/bookmarks.json
+.vscode/notes.*
 .vscode-test
 
 # yarn v2
