--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "author": "Nick C.",
     "license": "MIT",
     "devDependencies": {
+        "@jest/globals": "29.7.0",
         "@types/jest": "^29.5.14",
-        "@types/node": "^16.18.119",
+        "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "8.13.0",
         "@typescript-eslint/parser": "8.13.0",
+        "@vitest/ui": "^2.1.5",
         "builtin-modules": "4.0.0",
         "esbuild": "0.24.0",
         "jest": "^29.7.0",
@@ -40,11 +42,12 @@
         "obsidian-dev-utils": "latest",
         "obsidian-typings": "latest",
         "terser": "5.36.0",
-        "ts-jest": "^29.2.5",
-        "ts-node": "^10.9.2",
+        "ts-jest": "29.2.5",
+        "ts-node": "10.9.2",
         "tslib": "2.4.0",
         "turndown": "^7.2.0",
-        "typescript": "5.6.3"
+        "typescript": "5.6.3",
+        "vitest": "^2.1.5"
     },
     "dependencies": {
         "deepmerge-ts": "7.1.3"
