--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,15 +23,13 @@
       "obsidian-typings/implementations": [
         "node_modules/obsidian-typings/dist/implementations.d.ts",
         "node_modules/obsidian-typings/dist/implementations.cjs"
-      ],
-      "Utility": ["./typings/Utility"]
+      ]
     },
     "outDir": "./dist"
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.d.ts",
-    "test/**/*.ts"
+    "src/**/*.d.ts"
   ],
   "exclude": ["node_modules", "main.js", "dist"]
 }
