--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
         "ts-jest": "29.2.5",
         "ts-node": "10.9.2",
         "tslib": "2.4.0",
-        "turndown": "^7.2.0",
         "typescript": "5.6.3",
         "vitest": "^2.1.5"
     },
     "dependencies": {
-        "deepmerge-ts": "7.1.3"
+        "deepmerge-ts": "7.1.3",
+        "turndown": "^7.2.0"
     }
 }
