--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "vitest": "^2.1.5"
     },
     "dependencies": {
-        "deepmerge-ts": "7.1.3",
+        "mergician": "^2.0.2",
         "turndown": "^7.2.0"
     }
 }
